Fix .docs-sidebar overflow issue

--- a/source/stylesheets/pages/_docs.scss
+++ b/source/stylesheets/pages/_docs.scss
@@ -7,6 +7,8 @@ body.integrations {
 
   .docs-sidebar {
     z-index: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
     position: fixed;
     top: 69px;
     left: 0;
@@ -77,7 +79,8 @@ body.integrations {
     }
 
     .docs-sidebar-footer {
-      position: absolute;
+      position: relative;
+      margin-top: 0px;
       bottom: 10px;
       padding: 10px 20px 10px 10px;
       font-size: 1.5rem;
